<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.EditGoalDialogFragment"
    android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleEditGoal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/edit_goal"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_goal_name"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.153"
                tools:layout_editor_absoluteX="0dp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputGoalName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="110dp"
                    android:padding="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_goal_amount"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.153"
                tools:layout_editor_absoluteX="0dp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputGoalAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="110dp"
                    android:padding="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/chkObjs"
                android:text="Objectives"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <ImageButton
                    android:id="@+id/btnNewObj"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add_black_24dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />



            </androidx.constraintlayout.widget.ConstraintLayout>
            <ListView
                android:id="@+id/addObjsList"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSaveGoalEdit"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="SAVE"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="18sp"
                app:icon="@drawable/ic_save_black_24dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDeleteGoal"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="DELETE"
                android:textColor="#FFDC3131"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="18sp"
                app:icon="@drawable/ic_delete_black_24dp"
                app:iconTint="#DC3131" />
        </LinearLayout>


</LinearLayout>